# description_omni_robot

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_description_omni_robot.yaml  omni_controllers.yaml
launch/: display.launch  gazebo.launch
meshes/: arm_1_link.STL  arm_2_link.STL  base_link.STL  camera_link.STL  wheel_1_link.STL  wheel_2_link.STL  wheel_3_link.STL  wheel_4_link.STL
rviz/: omni_rviz.rviz  robot_omni_rviz.rviz
scripts/: arm_control.py  controlKeyboard.py  display_encoders.py
urdf/: description_omni_robot.csv  description_omni_robot.urdf
